# build-buddy-example-go

./: BUILD.bazel  Makefile  WORKSPACE
internal/foo/: BUILD.bazel  foo.go  foo_test.go
